--- a/css/style.css
+++ b/css/style.css
@@ -109,8 +109,9 @@ html{
 }
 .title__icon{
     background-color: var(--icon-bg);
-    padding: 15px;
-    border-radius: 50%;
+    padding: 10px;
+    width: 50px;
+    border-radius: 40%;
     border: 1px solid var(--border);
     opacity: 0;
     transition: opacity 3s;
@@ -120,6 +121,9 @@ html{
 }
 .title__icon.title__show {
     opacity: 1;
+}
+.contact__icon {
+    width: 40px;
 }
 .container{
     width: 65%;
@@ -201,7 +205,7 @@ html{
     border: 1px solid var(--border);
     overflow: hidden;
     opacity: 0;
-    transition: opacity 3s;
+    transition: opacity 3s ease-out;
 }
 .card.element__show {
     opacity: 1;
